# UCY-parallel-fortran

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/code-jams/: fortran-2008-test-my-message.f90  goodbye.f90  synchronous-derivative-get.f90  type-bound-procedure.f90
src/homework1/: test-my-message.f90
src/homework1-refactored/: CMakeLists.txt  my-message-implementation.f90  my-message-interface.f90  run-my-message-test.sh  test-my-message.f90
src/homework2/procedural_fireworks/: Makefile  main.f90
src/homework3/: CMakeLists.txt  README.md
src/homework3/fortran2008_procedural_fireworks/: CMakeLists.txt  main.f90
src/homework4/: CMakeLists.txt  synchronous-derivative-get.f90
src/solutions/: CMakeLists.txt
src/solutions/homework1/: CMakeLists.txt  greeting.txt  run-homework1-solution.sh  test-my-message.f90
src/solutions/homework2/: CMakeLists.txt
src/solutions/homework2/procedural_fireworks/: CMakeLists.txt  fireworks_input.txt  main.f90  sky_procedures_implementation.f90  sky_procedures_interface.f90  stars_procedures_implementation.f90  stars_procedures_interface.f90
src/solutions/homework3/fortran2008_procedural_fireworks/: CMakeLists.txt  Makefile  main.f90
src/solutions/homework4/: synchronous-derivative-get.f90  synchronous-derivative-put.f90
